--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "clipboardy": "^4.0.0"
+    "chalk": "^4.1.0",
+    "child_process": "^1.0.2",
+    "clipboardy": "^4.0.0",
+    "emoji-strip": "^1.0.1",
+    "ffmpeg-static": "^5.2.0",
+    "ytdl-core": "^4.11.5"
   }
 }
